// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Snapshots should match with default input 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c2:focus-within,
.c2:focus {
  color: #41414A;
}

.c2:focus-within ~ legend,
.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus-within ~ label,
.c2:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c2:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c2::-webkit-input-placeholder {
  color: #9898A6;
}

.c2::-moz-placeholder {
  color: #9898A6;
}

.c2:-ms-input-placeholder {
  color: #9898A6;
}

.c2::placeholder {
  color: #9898A6;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c1 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 320px;
}

.c1:hover,
.c1:focus-within {
  border-color: #41414A;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        data-testid="input"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with disabled input 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c2:focus-within,
.c2:focus {
  color: #41414A;
}

.c2:focus-within ~ legend,
.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus-within ~ label,
.c2:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c2:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c2::-webkit-input-placeholder {
  color: #9898A6;
}

.c2::-moz-placeholder {
  color: #9898A6;
}

.c2:-ms-input-placeholder {
  color: #9898A6;
}

.c2::placeholder {
  color: #9898A6;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c1 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 320px;
}

.c1:hover,
.c1:focus-within {
  border-color: #41414A;
  border-color: #D3D3E2;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D3D3E2;
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      disabled=""
      label="Label"
    >
      <input
        class="c2"
        data-testid="input"
        disabled=""
        value=""
      />
      <label
        class="c3"
        disabled=""
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with error 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c2:focus-within,
.c2:focus {
  color: #41414A;
}

.c2:focus-within ~ legend,
.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus-within ~ label,
.c2:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #CB3530;
}

.c2:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c2::-webkit-input-placeholder {
  color: #9898A6;
}

.c2::-moz-placeholder {
  color: #9898A6;
}

.c2:-ms-input-placeholder {
  color: #9898A6;
}

.c2::placeholder {
  color: #9898A6;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 4px;
  color: #CB3530;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  color: #9898A6;
  font-size: 12px;
}

.c1 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #CB3530;
  padding-left: 12px;
  width: 320px;
}

.c1:hover,
.c1:focus-within {
  border-color: #CB3530;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #CB3530;
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        data-testid="input"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
    <div
      class="c6"
    >
      <span
        class="c7"
      >
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with full width 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c2:focus-within,
.c2:focus {
  color: #41414A;
}

.c2:focus-within ~ legend,
.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus-within ~ label,
.c2:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c2:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c2::-webkit-input-placeholder {
  color: #9898A6;
}

.c2::-moz-placeholder {
  color: #9898A6;
}

.c2:-ms-input-placeholder {
  color: #9898A6;
}

.c2::placeholder {
  color: #9898A6;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c1 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 100%;
}

.c1:hover,
.c1:focus-within {
  border-color: #41414A;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        data-testid="input"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with helper text and max length 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c2:focus-within,
.c2:focus {
  color: #41414A;
}

.c2:focus-within ~ legend,
.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus-within ~ label,
.c2:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c2:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c2::-webkit-input-placeholder {
  color: #9898A6;
}

.c2::-moz-placeholder {
  color: #9898A6;
}

.c2:-ms-input-placeholder {
  color: #9898A6;
}

.c2::placeholder {
  color: #9898A6;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 4px;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  color: #9898A6;
  font-size: 12px;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  color: #9898A6;
  font-size: 12px;
  margin-left: auto;
}

.c1 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 320px;
}

.c1:hover,
.c1:focus-within {
  border-color: #41414A;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        data-testid="input"
        maxlength="20"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
    <div
      class="c6"
    >
      <span
        class="c7"
      >
        Helper text
      </span>
      <span
        class="c8"
      >
        0
        /
        20
      </span>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with label 1`] = `
.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c2:focus-within,
.c2:focus {
  color: #41414A;
}

.c2:focus-within ~ legend,
.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus-within ~ label,
.c2:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c2:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c2::-webkit-input-placeholder {
  color: #9898A6;
}

.c2::-moz-placeholder {
  color: #9898A6;
}

.c2:-ms-input-placeholder {
  color: #9898A6;
}

.c2::placeholder {
  color: #9898A6;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c1 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 320px;
}

.c1:hover,
.c1:focus-within {
  border-color: #41414A;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Input"
    >
      <input
        class="c2"
        data-testid="input"
        value=""
      />
      <label
        class="c3"
      >
        Input
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Input
        </span>
      </legend>
      
    </fieldset>
  </div>
</div>
`;
